# Capitls

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  setup.sh
.claude/: settings.json  settings.json.example
adapters/: base_adapter.py  finary_adapter.py  market_adapter.py
mcp_server/: main.py
mcp_server/context/: user_profile.example.json  user_profile.json.example
mcp_server/tools/: analysis_tool.py  market_tool.py  portfolio_tool.py  regulation_tool.py
scripts/: finary_signin.py
skills/: benchmark.py  budget.py  dca.py  diversification.py  etf.py  pea_tracker.py  projection.py  simulation.py  tax.py  timing.py
tests/: test_skills.py
