[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capitls"
version = "0.1.0"
description = "Agent MCP de finance personnelle - usage personnel"
requires-python = ">=3.11"

dependencies = [
    "fastmcp>=3.2.0",
    "finary-uapi>=0.2.3",
    "yfinance>=0.2.50,<1.3.0",
    "pycoingecko>=3.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyotp>=2.9",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "adapters", "skills", "sources"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
